fix to prevent parent element of .reveal to collapse

--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -231,6 +231,10 @@ html.reveal-full-page {
 	position: relative;
 }
 
+*:has(> .reveal) {
+	height: 100%;
+}
+
 
 /*********************************************
  * CONTROLS
